Feature Update for Version 2409_RC

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                                 <ul id="nav">
                                     <li><a href="./index.html">Home</a></li>
                                     <li class="active"><a href="./about.html">About</a></li>
-                                    <li><a href="./gallery.html">Works by NRFZ</a></li>
+                                    <li><a href="./works-by-nrfz.html">Works by NRFZ</a></li>
                                     <li><a href="./blog.html">Blog</a></li>
 
                                 </ul>
