--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <ul id="nav">
                                     <li class="active"><a href="./index.html">Home</a></li>
                                     <li><a href="./about.html">About</a></li>
-                                    <li><a href="./gallery.html">Works By NRFZ</a></li>
+                                    <li><a href="./works-by-nrfz.html">Works By NRFZ</a></li>
                                     <li><a href="./blog.html">Blog</a></li>
 
                                 </ul>
@@ -216,7 +216,7 @@
             </div>
             <div class="row">
                 <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-                    <a href="./gallery.html" class="btn pw-btn btn-2 mt-15">View All &nbsp;<i
+                    <a href="./works-by-nrfz.html" class="btn pw-btn btn-2 mt-15">View All &nbsp;<i
                             class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
