--- a/worksbynrfz/ffl.html
+++ b/worksbynrfz/ffl.html
@@ -54,7 +54,7 @@
                 <ul id="nav">
                   <li><a href="../index.html">Home</a></li>
                   <li><a href="../about.html">About</a></li>
-                  <li class="active"><a href="../gallery.html">Works by NRFZ</a></li>
+                  <li class="active"><a href="../works-by-nrfz.html">Works by NRFZ</a></li>
                   <li><a href="../blog.html">Blog</a></li>
 
                 </ul>
@@ -77,7 +77,7 @@
               <ol class="breadcrumb justify-content-center">
                 <li class="breadcrumb-item"><a href="../index.html"> Home</a>
                 </li>
-                <li class="breadcrumb-item"><a href="../gallery.html"> Works By NRFZ</a>
+                <li class="breadcrumb-item"><a href="../works-by-nrfz.html"> Works By NRFZ</a>
                 </li>
               </ol>
             </nav>
