--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -17,6 +17,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-extension-1.css">
+    
 </head>
 
 <body>
