--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             <a class="info" href="worksbynrfz/bp12.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/r0gIlFD.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                             <a class="info" href="worksbynrfz/man-a22-masc.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/6oNoqnp.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
                             <a class="info" href="worksbynrfz/myts-app.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/03mFKk0.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
                             <a class="info" href="worksbynrfz/bus-rep.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/FC4fSsG.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -195,7 +195,7 @@
                             <a class="info" href="worksbynrfz/igra3.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/kstN8gT.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -209,7 +209,7 @@
                             <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/snXfU8d.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
