--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-extension-1.css">
-    
+
 </head>
 
 <body>
@@ -113,7 +113,7 @@
                             <a class="info" href="worksbynrfz/sit.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/YgEWKR0.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                             <a class="info" href="worksbynrfz/bp12.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/r0gIlFD.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
                             <a class="info" href="worksbynrfz/lta-pids.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/0CvilmH.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                             <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/69edjaV.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -165,7 +165,7 @@
                             <a class="info" href="worksbynrfz/man-a22-masc.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/6oNoqnp.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -178,7 +178,7 @@
                             <a class="info" href="worksbynrfz/myts-app.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/03mFKk0.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -192,7 +192,7 @@
                             <a class="info" href="worksbynrfz/bus-rep.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/FC4fSsG.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -206,7 +206,7 @@
                             <a class="info" href="worksbynrfz/igra3.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/kstN8gT.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -219,7 +219,7 @@
                             <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/snXfU8d.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -232,7 +232,7 @@
                             <a class="info" href="worksbynrfz/more-rep.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/7e69TyC.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -245,7 +245,7 @@
                             <a class="info" href="worksbynrfz/mrt-signage-rep-s1.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/9ynFmuE.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -258,7 +258,7 @@
                             <a class="info" href="worksbynrfz/mrt-signage-rep-s2.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/FRqxXUy.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -271,7 +271,7 @@
                             <a class="info" href="worksbynrfz/hydrationreg.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/4DBfqCK.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -284,7 +284,7 @@
                             <a class="info" href="worksbynrfz/ezlink-red.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/fepgW5P.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -297,7 +297,7 @@
                             <a class="info" href="worksbynrfz/food-rev-flash-app.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/5uss3c8.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -310,7 +310,7 @@
                             <a class="info" href="worksbynrfz/ffl.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/3dYLGoP.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -323,7 +323,7 @@
                             <a class="info" href="worksbynrfz/igra1.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/b29Wusf.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -336,7 +336,7 @@
                             <a class="info" href="worksbynrfz/igra2.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/ZGhtKD7.png" class="portfolio-img"><i
-                                    class="fa-solid fa-magnifying-glass-plus"></i></a>
+                                    class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
