--- a/worksbynrfz/sit.html
+++ b/worksbynrfz/sit.html
@@ -16,8 +16,8 @@
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../style-extension-1.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style-extension-1.css">
 
     <link rel="stylesheet" href="../css/swiper-bundle.min.css">
     <link rel="stylesheet" href="../css/glightbox.min.css">
