--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
+                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms" style="margin-bottom: 18px;">
                         <h2>Likes & Interests</h2>
                     </div>
                 </div>
