2024-09 Feature Update for Version 2409

--- a/worksbynrfz/sit.html
+++ b/worksbynrfz/sit.html
@@ -176,8 +176,7 @@
 
                         <div class="copywrite-text">
                             <p>
-                                Copyright &copy;
-                                <script>document.write(new Date().getFullYear());</script> All rights reserved</a>
+                                &copy; <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli</a>
                             </p>
                         </div>
 
