--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -153,7 +153,7 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="https://i.imgur.com/YdImkKH.png" alt="tdc-home">
+              <img src="https://i.imgur.com/4baefCu.png" alt="tdc-home">
             </div>
 
             <div class="swiper-slide">
