--- a/overview/recent-incidents.html
+++ b/overview/recent-incidents.html
@@ -6,7 +6,7 @@
             <h2 class="accordion-header " id="headingSMRT">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSMRT"
                     aria-expanded="false" aria-controls="collapseSMRT">
-                    <h2><img src="../img/core-img/stl.png" alt="SMRTT" width="150px"></h2>
+                    <h2><img src="img/core-img/stl.png" alt="SMRTT" width="150px"></h2>
                 </button>
             </h2>
             <div id="collapseSMRT" class="accordion-collapse collapse" aria-labelledby="headingSMRT"
