--- a/overview/recent-incidents.html
+++ b/overview/recent-incidents.html
@@ -1,15 +1,15 @@
 <!-- Recent Incidents -->
 <div class="row row-ri">
-    <div class="accordion" id="accordTrains">
+    <div class="accordion wow fadeInUp" id="accordTrains" data-wow-delay="300ms">
 
         <div class="accordion-item">
             <h2 class="accordion-header " id="headingSMRT">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSMRT"
-                    aria-expanded="false" aria-controls="collapseSMRT">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSMRT"
+                    aria-expanded="true" aria-controls="collapseSMRT">
                     <h2><img src="img/core-img/stl.png" alt="SMRTT" width="150px"></h2>
                 </button>
             </h2>
-            <div id="collapseSMRT" class="accordion-collapse collapse" aria-labelledby="headingSMRT"
+            <div id="collapseSMRT" class="accordion-collapse collapse show" aria-labelledby="headingSMRT"
                 data-bs-parent="#accordTrains">
                 <div class="accordion-body">
                     <p class="mb-0" style="color: #000;">
