--- a/past-records/fault-overview.html
+++ b/past-records/fault-overview.html
@@ -30,7 +30,6 @@
     </div>
 
     <header class="header-area">
-
         <div class="main-header-area">
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
@@ -52,7 +51,6 @@
                                 <ul id="nav">
                                     <li><a href="statistics/statistics.html">Statistics</a></li>
                                     <li><a href="past-records/past-records.html">Past Records</a></li>
-                                    <!-- <li class="active"><a href="fault-overview.html">Faults Overview</a></li> -->
                                     <li><a href="our-networks.html">Networks</a></li>
                                 </ul>
                             </div>
@@ -64,7 +62,7 @@
         </div>
     </header>
 
-    <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/mrt-map.jpg);">
+    <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(../img/bg-img/hero.png);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
