--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -32,7 +32,6 @@
 
 
     <header class="header-area">
-
         <div class="main-header-area">
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
@@ -54,7 +53,6 @@
                                 <ul id="nav">
                                     <li class="active"><a href="../statistics/statistics.html">Statistics</a></li>
                                     <li><a href="../past-records/past-records.html">Past Records</a></li>
-                                    <!-- <li><a href="../fault-overview.html">Faults Overview</a></li> -->
                                     <li><a href="../our-networks.html">Networks</a></li>
                                 </ul>
                             </div>
@@ -68,17 +66,16 @@
 
 
     <!-- ============================================= Hero Section ============================================= -->
-    <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(../img/bg-img/hero-smrt.jpg);">
+    <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(../img/bg-img/hero.png);">
         <div class="container h-100" style="margin-top: 2em;">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcrumb-content text-center">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb justify-content-center">
-                                <li class="breadcrumb-item"><a href="index.html">Home</a>
+                                <li class="breadcrumb-item"><a href="../index.html">Home</a>
                                 </li>
-                                <li class="breadcrumb-item">Statistics</li>
-                                <li class="breadcrumb-item active" aria-current="page">MDTBD</li>
+                                <li class="breadcrumb-item active">Statistics</li>
                             </ol>
                         </nav>
                         <h2 class="page-title">Mean Distance Travelled Between Delays</h2>
