--- a/our-networks.html
+++ b/our-networks.html
@@ -28,7 +28,6 @@
     </div>
 
     <header class="header-area">
-
         <div class="main-header-area">
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
@@ -50,7 +49,6 @@
                                 <ul id="nav">
                                     <li><a href="statistics/statistics.html">Statistics</a></li>
                                     <li><a href="past-records/past-records.html">Past Records</a></li>
-                                    <!-- <li><a href="fault-overview.html">Faults Overview</a></li> -->
                                     <li class="active"><a href="our-networks.html">Networks</a></li>
                                 </ul>
                             </div>
@@ -63,13 +61,15 @@
     </header>
 
 
-    <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/mrt-map.jpg);">
+    <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/hero.png)">
         <div class="container h-100" style="margin-top: 2em;">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcrumb-content text-center">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb justify-content-center">
+                                <li class="breadcrumb-item"><a href="../index.html">Home</a>
+                                </li>
                                 <li class="breadcrumb-item active" aria-current="page">Networks</li>
                             </ol>
                         </nav>
@@ -258,10 +258,11 @@
 
                         <div class="copywrite-text">
                             <p>
-                                Information obtained from <a href="https://landtransportguru.net/">Land Transport Guru</a> and <a
-                                  href="https://www.lta.gov.sg/content/ltagov/en/getting_around/public_transport/rail_network.html">Land
-                                  Transport Authority</a>
-                              </p>
+                                Information obtained from <a href="https://landtransportguru.net/">Land Transport
+                                    Guru</a> and <a
+                                    href="https://www.lta.gov.sg/content/ltagov/en/getting_around/public_transport/rail_network.html">Land
+                                    Transport Authority</a>
+                            </p>
                         </div>
                     </div>
                 </div>
