--- a/past-records/past-records.html
+++ b/past-records/past-records.html
@@ -34,7 +34,6 @@
 
 
     <header class="header-area">
-
         <div class="main-header-area">
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
@@ -56,7 +55,6 @@
                                 <ul id="nav">
                                     <li><a href="../statistics/statistics.html">Statistics</a></li>
                                     <li class="active"><a href="past-records.html">Past Records</a></li>
-                                    <!-- <li><a href="../fault-overview.html">Faults Overview</a></li> -->
                                     <li><a href="../our-networks.html">Networks</a></li>
                                 </ul>
                             </div>
@@ -70,8 +68,8 @@
 
 
     <!-- ============================================= Hero Section ============================================= -->
-    <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(../img/bg-img/hero-smrt.jpg);">
-        <div class="container h-100">
+    <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(../img/bg-img/hero.png);">
+        <div class="container h-100" style="margin-top: 2em;">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcrumb-content text-center">
@@ -82,7 +80,7 @@
                                 <li class="breadcrumb-item active" aria-current="page">Past Records</li>
                             </ol>
                         </nav>
-                        <h2 class="page-title">SMRT Trains</h2>
+                        <h2 class="page-title">Past Records</h2>
                     </div>
                 </div>
             </div>
