--- a/worksbynrfz/bp12.html
+++ b/worksbynrfz/bp12.html
@@ -126,7 +126,7 @@
           </div>
           <div class="single_catagory">
             <a href="https://drive.google.com/file/d/1gw_glFIaAOs9FSBloBTBgmgOObMK1GcL/view?usp=sharing"
-            class="btn pw-btn btn-2 mt-15" target="_blank"><i class="fa-solid fa-file-pdf"></i>&nbsp;View PDF Version</a>
+            class="btn wbnrfz_btn" target="_blank"><i class="fa-solid fa-file-pdf"></i>&nbsp;View PDF Version</a>
           </div>
         </div>
       </div>
