--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -131,7 +131,7 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="downloads/Experimenting Improvements of Current Wayfinding.pdf"
                   download>First Edition</a></li>
-              <li><a class="dropdown-item" href="#">Second Edition</a></li>
+              <!-- <li><a class="dropdown-item" href="#">Second Edition</a></li> -->
             </ul>
             <a class="btn wbnrfz_btn"
               href="https://drive.google.com/file/d/1jKlaRXYsOWCaQVGjVIBPz8G8X-uq_GfO/view?usp=sharing"><i
