2025-XX Cumulative Update (4.2.XX)

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
             <div class="row">
                 <div class="col-12 sect-title">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
-                        <h2 style="font-size: 30px">Summary</h2>
+                        <h2 style="font-size: 36px">Summary</h2>
                     </div>
                 </div>
             </div>
@@ -155,14 +155,14 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
-                        <h2 style="font-size: 30px">Timelines</h2>
+                        <h2 style="font-size: 35px">Timelines</h2>
                     </div>
                 </div>
 
                 <!-- Education -->
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
-                        <h1 style="text-align: left; margin-bottom: -45px;"><u>Education</u></h2>
+                        <h1 style="text-align: left; margin-bottom: -45px; font-size: 36px;"><u>Education</u></h2>
                     </div>
                 </div>
             </div>
@@ -217,7 +217,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
-                        <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em;"><u>Awards &
+                        <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em; font-size: 30px;"><u>Awards &
                                 Achievements</u></h2>
                     </div>
                 </div>
@@ -286,7 +286,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
-                        <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em;"><u>Experiences</u></h2>
+                        <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em; font-size: 30px;"><u>Experiences</u></h2>
                     </div>
                 </div>
             </div>
