2025-XX Cumulative Update (4.2.XX)

--- a/about.html
+++ b/about.html
@@ -299,7 +299,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="period-date-exp">
-                            Oct 2024
+                            Oct - Nov 2024
                         </div>
                         <h3 style="font-size: 18px; font-weight: bolder; margin-top: 25px;">Alphaeus Pte Ltd</h4>
                             <p style="font-size: 15px; text-align: left;">
