--- a/worksbynrfz/mrt-signage-rep-s2 copy.html
+++ b/worksbynrfz/mrt-signage-rep-s2 copy.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>MyTransport.SG App Redesign | WBN</title>
+  <title>MRT Signages Concept/Replications S2 | WBN</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
@@ -68,7 +68,7 @@
   </header>
 
 
-  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/03mFKk0.png)">
+  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/FRqxXUy.png)">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
@@ -81,7 +81,7 @@
                 </li>
               </ol>
             </nav>
-            <h2 class="page-title">MyTransport.SG App Redesign</h2>
+            <h2 class="page-title">MRT Signages Concept/Replications S2</h2>
           </div>
         </div>
       </div>
@@ -98,10 +98,10 @@
               <i class="fa-solid fa-pen-to-square"></i>
             </div>
             <h3 style="font-size: 20px; font-weight: bolder;">Project Description</h3>
-            <h4 style="font-size: 15px; font-weight: normal;"> An app concept of the redesigned MyTransport.SG App,
-              updated with the current design language from the
-              <a href="https://www.samuel-lim.com/singapore-mrt-signage-system">new wayfinding system</a>.
-            </h4>
+            <h4 style="font-size: 15px; font-weight: normal;"> Ever taken the brown line (heh, poop colour)? Some of
+              these may look familiar to you. But I've injected some of my improvements in the designs in here. The
+              first picture - The Yew Tee Train Timings, were made way back in 2021. But the real-life counterpart is
+              shockingly similiar.
           </div>
         </div>
 
@@ -111,7 +111,7 @@
               <i class="fa-solid fa-list"></i>
             </div>
             <h3 style="font-size: 20px; font-weight: bolder;">Category</h3>
-            <h4 style="font-size: 15px; font-weight: normal;">Mockup Designs</h4>
+            <h4 style="font-size: 15px; font-weight: normal;">Concepts & Replications</h4>
           </div>
         </div>
 
@@ -121,7 +121,7 @@
               <i class="fa-solid fa-calendar-days"></i>
             </div>
             <h3 style="font-size: 20px; font-weight: bolder;">Project Year</h3>
-            <h4 style="font-size: 15px; font-weight: normal;">2022</h4>
+            <h4 style="font-size: 15px; font-weight: normal;">2023</h4>
           </div>
         </div>
       </div>
@@ -130,9 +130,9 @@
     <!-- Button Section -->
     <!-- <div class="row">
       <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-        <a href="https://drive.google.com/file/d/1JAwwdZ1DZtpb1xlRrICBFnGwgZeQSGi3/view?usp=sharing"
-          class="btn pw-btn btn-2 mt-15" target="_blank">
-          <i class="fa-solid fa-file-pdf"></i>&nbsp;View PDF Version</a>
+        <a href="https://nurafianzulkifli.github.io/train-delays-checker-v2/" class="btn pw-btn btn-2 mt-15"
+          target="_blank">
+          <i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp;Train Delays Checker V2</a>
       </div>
     </div> -->
     </div>
@@ -146,22 +146,21 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="https://imgur.com/1lEzi6x.png" alt="ui-home">
+              <img src="https://i.imgur.com/ImQ2uOp.png" alt="ywt-train-sched">
             </div>
 
             <div class="swiper-slide">
-              <img src="https://imgur.com/wrbVSvd.png" alt="ui-services">
+              <img src="https://i.imgur.com/CQby9Uz.png" alt="exit-dir-1">
             </div>
 
             <div class="swiper-slide">
-              <img src="https://imgur.com/LzB1Kva.png" alt="ui-home-dark">
+              <img src="https://i.imgur.com/3M5vRTH.png" alt="ccl-guide">
             </div>
 
-            <div class="swiper-slide">
-              <img src="https://imgur.com/0mq1EqJ.png" alt="ui-services-dark">
-            </div>
-
+          <div class="swiper-slide">
+            <img src="https://i.imgur.com/z4W61lC.png" alt="exit-dir-2">
           </div>
+        </div>
           <div class="swiper-pagination"></div>
         </div>
       </div>
