--- a/worksbynrfz/ezlink-red.html
+++ b/worksbynrfz/ezlink-red.html
@@ -106,7 +106,7 @@
             <h4>Concepts & Replications</h4>
           </div>
           <div class="col-sm-3 single_catagory">
-            <span>Project Duration</span>
+            <span>Project Year</span>
             <h4>2023</h4>
           </div>
           <div class="col-sm-3 single_catagory">
