2025-XX Cumulative Update (4.2.XX)

--- a/blog.html
+++ b/blog.html
@@ -86,7 +86,7 @@
     </section>
 
 
-    <section class="ftco-section-blog bg-light">
+    <section class="ftco-section-blog">
         <div class="container container-blogList">
             <div class="row d-flex">
                 <div class="col-md-6 wow fadeInUpBig" data-wow-delay="100ms">
