2025-XX Cumulative Update to Version Next

--- a/overview/status-overview.html
+++ b/overview/status-overview.html
@@ -5,8 +5,8 @@
             <div class="card-header py-3 d-flex align-items-center justify-content-between"
                 style="background-color: #c4cbe7;">
                 <h6 class="m-0 font-weight-bold text-black">
-                    <span data-title="Period: 15 Dec 24 - 13 Jan 25">
-                        Line Uptime Overview - 30 days</span>
+                    <span>
+                        Line Uptime Overview - last 30 days</span>
                 </h6>
             </div>
 
@@ -16,38 +16,38 @@
                 <div class="line-indiv">
                     <div class="service">Circle Line</div>
                     <div class="chart">
-                        <div class="bar green" data-bs-toggle="modal" title="15 December 2024"></div>
-                        <div class="bar red" data-bs-toggle="modal" title="16 November 2024"
-                            data-bs-target="#incident1"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="17 November 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="18 November 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="19 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="20 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="21 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="22 December 2024"></div>
-                        <div class="bar red" data-bs-toggle="modal" title="23 December 2024"
-                            data-bs-target="#incident2"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="24 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="25 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="26 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="27 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="28 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="29 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="30 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="31 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="1 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="2 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="3 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="4 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="5 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="6 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="7 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="8 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="9 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="10 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="11 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="12 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="13 January 2025"></div>
+                        <div class="bar green" title="15 December 2024"></div>
+                        <div class="bar red" title="16 December 2024" data-bs-toggle="modal" data-bs-target="#16Nov">
+                        </div>
+                        <div class="bar green" title="17 December 2024"></div>
+                        <div class="bar green" title="18 December 2024"></div>
+                        <div class="bar green" title="19 December 2024"></div>
+                        <div class="bar green" title="20 December 2024"></div>
+                        <div class="bar green" title="21 December 2024"></div>
+                        <div class="bar green" title="22 December 2024"></div>
+                        <div class="bar red" title="23 December 2024" data-bs-toggle="modal" data-bs-target="#23Dec">
+                        </div>
+                        <div class="bar green" title="24 December 2024"></div>
+                        <div class="bar green" title="25 December 2024"></div>
+                        <div class="bar green" title="26 December 2024"></div>
+                        <div class="bar green" title="27 December 2024"></div>
+                        <div class="bar green" title="28 December 2024"></div>
+                        <div class="bar green" title="29 December 2024"></div>
+                        <div class="bar green" title="30 December 2024"></div>
+                        <div class="bar green" title="31 December 2024"></div>
+                        <div class="bar green" title="1 January 2025"></div>
+                        <div class="bar green" title="2 January 2025"></div>
+                        <div class="bar green" title="3 January 2025"></div>
+                        <div class="bar green" title="4 January 2025"></div>
+                        <div class="bar green" title="5 January 2025"></div>
+                        <div class="bar green" title="6 January 2025"></div>
+                        <div class="bar green" title="7 January 2025"></div>
+                        <div class="bar green" title="8 January 2025"></div>
+                        <div class="bar green" title="9 January 2025"></div>
+                        <div class="bar green" title="10 January 2025"></div>
+                        <div class="bar green" title="11 January 2025"></div>
+                        <div class="bar green" title="12 January 2025"></div>
+                        <div class="bar green" title="13 January 2025"></div>
 
                     </div>
                 </div>
@@ -57,38 +57,40 @@
                 <div class="line-indiv">
                     <div class="service">Thomson-East Coast Line</div>
                     <div class="chart">
-                        <div class="bar green" data-bs-toggle="modal" title="15 December 2024"></div>
-                        <div class="bar red" data-bs-toggle="modal" title="16 November 2024"
-                            data-bs-target="#incident1"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="17 November 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="18 November 2024"></div>
-                        <div class="bar yellow" data-bs-toggle="modal" title="19 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="20 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="21 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="22 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="23 December 2024"
-                            data-bs-target="#incident2"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="24 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="25 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="26 December 2024"></div>
-                        <div class="bar red" data-bs-toggle="modal" title="27 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="28 December 2024"></div>
-                        <div class="bar red" data-bs-toggle="modal" title="29 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="30 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="31 December 2024"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="1 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="2 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="3 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="4 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="5 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="6 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="7 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="8 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="9 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="10 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="11 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="12 January 2025"></div>
-                        <div class="bar green" data-bs-toggle="modal" title="13 January 2025"></div>
+                        <div class="bar green" title="15 December 2024"></div>
+                        <div class="bar green" title="16 December 2024"></div>
+                        <div class="bar green" title="17 December 2024"></div>
+                        <div class="bar green" title="18 December 2024"></div>
+                        <div class="bar yellow" title="19 December 2024" data-bs-toggle="modal" data-bs-target="#19Dec">
+                        </div>
+                        <div class="bar green" title="20 December 2024"></div>
+                        <div class="bar green" title="21 December 2024"></div>
+                        <div class="bar green" title="22 December 2024"></div>
+                        <div class="bar green" title="23 December 2024"></div>
+                        <div class="bar green" title="24 December 2024"></div>
+                        <div class="bar green" title="25 December 2024"></div>
+                        <div class="bar green" title="26 December 2024"></div>
+                        <div class="bar red" title="27 December 2024" data-bs-toggle="modal" data-bs-target="#27Dec">
+                        </div>
+                        <div class="bar green" title="28 December 2024"></div>
+                        <div class="bar red" title="29 December 2024" data-bs-toggle="modal" data-bs-target="#29Dec">
+                        </div>
+                        <div class="bar green" title="30 December 2024"></div>
+                        <div class="bar green" title="31 December 2024"></div>
+                        <div class="bar green" title="1 January 2025"></div>
+                        <div class="bar yellow" title="2 January 2025" data-bs-toggle="modal" data-bs-target="#02Jan">
+                        </div>
+                        <div class="bar green" title="3 January 2025"></div>
+                        <div class="bar green" title="4 January 2025"></div>
+                        <div class="bar green" title="5 January 2025"></div>
+                        <div class="bar green" title="6 January 2025"></div>
+                        <div class="bar green" title="7 January 2025"></div>
+                        <div class="bar green" title="8 January 2025"></div>
+                        <div class="bar green" title="9 January 2025"></div>
+                        <div class="bar green" title="10 January 2025"></div>
+                        <div class="bar green" title="11 January 2025"></div>
+                        <div class="bar green" title="12 January 2025"></div>
+                        <div class="bar green" title="13 January 2025"></div>
 
                     </div>
                 </div>
@@ -102,7 +104,7 @@
                     <p class="legend">100% uptime</p>
 
                     <div class="legend-colour yellow"></div>
-                    <p class="legend">0 - 10 min downtime</p>
+                    <p class="legend">0-10 min downtime</p>
 
                     <div class="legend-colour red"></div>
                     <p class="legend">10+ min downtime</p>
@@ -115,11 +117,11 @@
 
 <!-- Incidents List -->
 <!-- Dec 16 -->
-<div class="modal fade" id="incident1" tabindex="-1" aria-labelledby="incident1Label" aria-hidden="true">
+<div class="modal fade" id="16Nov" tabindex="-1" aria-labelledby="16NovLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="incident1Label">16 December 2024</h1>
+                <h1 class="modal-title fs-5" id="16NovLabel">16 December 2024</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -135,12 +137,33 @@
     </div>
 </div>
 
-<!-- Dec 23 -->
-<div class="modal fade" id="incident2" tabindex="-1" aria-labelledby="incident2Label" aria-hidden="true">
+<!-- Dec 19 -->
+<div class="modal fade" id="19Dec" tabindex="-1" aria-labelledby="19DecLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="incident2Label">23 December 2024</h1>
+                <h1 class="modal-title fs-5" id="19DecLabel">19 December 2024</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                [TEL]: Due to a signal fault, trains are moving slower between Bayshore and Woodlands North in both
+                directions. Additional travelling time of 10 minutes expected.
+            </div>
+            <div class="modal-footer">
+                <a class="btn wbnrfz_btn" data-bs-dismiss="modal">Close </a>
+                <a class="btn wbnrfz_btn" href="https://x.com/SMRT_Singapore/status/1869558003860742549"><i
+                        class="fa-solid fa-external-link"></i>&nbsp; View Post </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Dec 23 -->
+<div class="modal fade" id="23Dec" tabindex="-1" aria-labelledby="23DecLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="23DecLabel">23 December 2024</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -151,6 +174,69 @@
             <div class="modal-footer">
                 <a class="btn wbnrfz_btn" data-bs-dismiss="modal">Close </a>
                 <a class="btn wbnrfz_btn" href="https://x.com/SMRT_Singapore/status/1871054828673421706"><i
+                        class="fa-solid fa-external-link"></i>&nbsp; View Post </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Dec 27 -->
+<div class="modal fade" id="27Dec" tabindex="-1" aria-labelledby="27DecLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="27DecLabel">27 December 2024</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                [TEL]: Due to a train fault, trains are moving slower from Springleaf towards Orchard. Please allow for
+                additional 15 mins travel time from Springleaf towards Orchard.
+            </div>
+            <div class="modal-footer">
+                <a class="btn wbnrfz_btn" data-bs-dismiss="modal">Close </a>
+                <a class="btn wbnrfz_btn" href="https://x.com/SMRT_Singapore/status/1871054828673421706"><i
+                        class="fa-solid fa-external-link"></i>&nbsp; View Post </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Dec 29 -->
+<div class="modal fade" id="29Dec" tabindex="-1" aria-labelledby="29DecLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="29DecLabel">29 December 2024</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                [TEL]: Due to a train fault, trains are moving slower from Bayshore towards Woodlands North. Additional
+                travelling time of 15 mins from Bayshore to Woodlands North.
+            </div>
+            <div class="modal-footer">
+                <a class="btn wbnrfz_btn" data-bs-dismiss="modal">Close </a>
+                <a class="btn wbnrfz_btn" href="https://x.com/SMRT_Singapore/status/1873366778963022111"><i
+                        class="fa-solid fa-external-link"></i>&nbsp; View Post </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Jan 2 -->
+<div class="modal fade" id="02Jan" tabindex="-1" aria-labelledby="02JanLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="02JanLabel">02 January 2025</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                [TEL]: Please allow for additional 10 mins travelling time from Caldecott to Gardens by the Bay due to a
+                train fault.
+            </div>
+            <div class="modal-footer">
+                <a class="btn wbnrfz_btn" data-bs-dismiss="modal">Close </a>
+                <a class="btn wbnrfz_btn" href="https://x.com/SMRT_Singapore/status/1874782432857383077"><i
                         class="fa-solid fa-external-link"></i>&nbsp; View Post </a>
             </div>
         </div>
